--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ mlflow = "^2.15.1"
 pandas = "<2.2.0"
 hydra-core = "^1.3.2"
 dvc = "^3.53.1"
+kaleido = "*"
 
 [build-system]
 requires = ["poetry-core"]
