--- a/house_pricing_app/pyproject.toml
+++ b/house_pricing_app/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python =  ">=3.9,<3.9.7 || >3.9.7,<3.13"
 dvc = "^3.53.2"
-
+streamlit = "^1.19.0" 
 
 [build-system]
 requires = ["poetry-core"]
