--- a/house_pricing_app/pyproject.toml
+++ b/house_pricing_app/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python =  ">=3.9,<3.9.7 || >3.9.7,<3.13"
 dvc = "^3.53.2"
 streamlit = "^1.19.0" 
+mlflow = "^2.15.1"
 
 [build-system]
 requires = ["poetry-core"]
