--- a/house_pricing_app/pyproject.toml
+++ b/house_pricing_app/pyproject.toml
@@ -10,7 +10,8 @@ python =  ">=3.9,<3.9.7 || >3.9.7,<3.13"
 dvc = "^3.53.2"
 streamlit = "^1.19.0" 
 mlflow = "^2.15.1"
-
+kaleido = "0.2.1"
+pycaret = "^3.3.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
